# notifier

./: .dockerignore  .gitignore  main.py  pyproject.toml  requirements.txt  whatsapp-notifier.spec
.github/: copilot-instructions.md
.github/workflows/: build.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
bridge/: package.json  whatsapp-bridge.js
config/: bot-config.json  guardrails-rules.json
config/notification-templates/: appointment-reminder-es.txt  appointment-reminder.txt
docker/: .env.example  docker-compose.yml
docker/evolution-api/: evolution.env
docker/n8n/: Dockerfile  entrypoint.sh
docs/: architecture.md  bot-guardrails.md  deployment-guide.md  user-manual.md
scripts/: build.sh  deploy.sh  import-workflows.sh  package.sh  setup-evolution.sh  start.sh  stop.sh
scripts/lib/: common.sh
specs/001-whatsapp-appointment-notifier/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-whatsapp-desktop-utility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __main__.py  main.py
src/models/: appointment.py  send_history.py  send_result.py  settings.py
src/services/: bridge_manager.py  csv_exporter.py  excel_reader.py  history_store.py  phone_normalizer.py  send_worker.py  settings_store.py  template_renderer.py  whatsapp_client.py
src/ui/: history_view.py  main_window.py  qr_dialog.py  results_table.py  (+1 more)
(+14 files in other folders)
